# opencv-study

./: .gitignore  README.md  cv-camera-face.py  cv-camera.py  cv-find-face.py  cv-show-image.py  faces_in_image.py
_notes/: image.md  reference.md  setup.md
cv-cpp-demo/: Makefile  camera.cpp  color-trackbar.cpp  draw.cpp  img-contour.cpp  img.cpp  video.cpp
cv-cpp-face-detect/: Makefile
opencv-cmake-setup/: README.md
opencv-cmake-test/: CMakeLists.txt  README.md  main.cpp
opencv-source-vscode-setup/: README.md
window-vscode-setup/: README.md
